<resources>
    <string name="app_name">Pharmacy</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="image_of_pharmacy">Image of pharmacy</string>
    <string name="id">ID</string>
    <string name="id1">ID:</string>
    <string name="telephone">Stuff:</string>
    <string name="admin_id1">Admin ID :</string>
    <string name="x">Admin ID :</string>
    <string name="ad">Admin ID :</string>
    <string name="ads">Admin ID :</string>
    <string name="admin_password">Admin password :</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="name1">Name</string>
    <string name="name2">Name</string>
    <string name="name">Name</string>
    <string name="admin_password0">Admin Password :</string>
    <string name="admin_name0">Admin Name :</string>
    <string name="textview0">TextView</string>
    <string name="admin_telephone0">Admin Telephone :</string>
    <string name="admin_id0">Admin ID :</string>
    <string name="todo0">TODO</string>
    <string name="textview3">TextView</string>
    <string name="name3">Name</string>
    <string name="admin_id">Admin ID :</string>
    <string name="admin_address">Admin Address :</string>
    <string name="admin_password1">Admin Password :</string>
    <string name="admin_name1">Admin Name :</string>
    <string name="textview1">TextView</string>
    <string name="admin_telephone1">Admin Telephone :</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="cashier_id">Cashier ID :</string>
    <string name="cashier_password">Cashier Password :</string>
    <string name="cashier_address">Cashier Address :</string>
    <string name="name4">Name</string>
    <string name="cashier_telephone">Cashier Telephone :</string>
    <string name="name5">Name</string>
    <string name="cashier_num_of_orders">cashier num of Orders :</string>
    <string name="name6">Name</string>
    <string name="customer_paid">Customer Paid:</string>
    <string name="total">Total:</string>
    <string name="change">Change:</string>
</resources>
