<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <EditText

        android:id="@+id/UsernameText"
        android:layout_width="310dp"
        android:layout_height="56dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/Login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/PasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="275dp"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/pharmacy"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="310dp"
        android:layout_height="62dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/Login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="196dp"
        android:layout_height="70dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/arimo_bold"
        android:padding="10dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#808080"
        android:textSize="24sp"
        android:translationY="57dp"
        app:backgroundTint="@color/Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="168dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/image_of_pharmacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/pharm2" />

</androidx.constraintlayout.widget.ConstraintLayout>
