<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/pharmback1" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminTableActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAdminTable"
            android:layout_width="419dp"
            android:layout_height="315dp"
            android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="95dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="144dp"
            android:fontFamily="@font/balthazar"
            android:text="@string/admin_telephone1"
            android:textColor="#04BAD8"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="101dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="376dp"
            android:fontFamily="@font/balthazar"
            android:text="@string/admin_id"
            android:textColor="#04BAD8"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="78dp"
            android:layout_height="47dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="260dp"
            android:fontFamily="@font/balthazar"
            android:text="Admin\nPassword :"
            android:textColor="#04BAD8"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="85dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/balthazar"
            android:text="Admin Name :"
            android:textColor="#04BAD8"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView20"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="88dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="204dp"
            android:fontFamily="@font/balthazar"
            android:text="@string/admin_address"
            android:textColor="#04BAD8"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonAdminTableCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="48dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:foreground="@drawable/pharmcrossicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pharmcrossicon"
            tools:targetApi="m" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonAdminTableDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginBottom="48dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:foreground="@drawable/pharmrighticon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/floatingActionButtonAdminTableCross" />

        <TextView
            android:id="@+id/textViewAdminTableID"
            android:layout_width="205dp"
            android:layout_height="37dp"
            android:layout_marginBottom="372dp"
            android:fontFamily="@font/balthazar"
            android:text="@string/textview1"
            android:textColor="#04BAD8"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.765"
            app:layout_constraintStart_toEndOf="@+id/textView16" />

        <EditText
            android:id="@+id/editTextAdminTableName"
            android:layout_width="201dp"
            android:layout_height="42dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="11"
            android:fontFamily="@font/balthazar"
            android:textColor="#04BAD8"
            app:layout_constraintBottom_toTopOf="@+id/editTextAdminTablePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.809"
            app:layout_constraintStart_toEndOf="@+id/textView21" />

        <EditText
            android:id="@+id/editTextAdminTablePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:fontFamily="@font/balthazar"
            android:textSize="20sp"
            android:textColor="#04BAD8"
            app:layout_constraintBottom_toTopOf="@+id/editTextAdminTableAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView20" />

        <EditText
            android:id="@+id/editTextAdminTableAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:fontFamily="@font/balthazar"
            android:textSize="20sp"
            android:textColor="#04BAD8"
            app:layout_constraintBottom_toTopOf="@+id/editTextAdminTableTelephone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.769"
            app:layout_constraintStart_toEndOf="@+id/textView22" />

        <EditText
            android:id="@+id/editTextAdminTableTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:fontFamily="@font/balthazar"
            android:textSize="20sp"
            android:textColor="#04BAD8"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonAdminTableDo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView23" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>